--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+  <div class="logo"><%= image_tag("Aberrant.png", :alt => "main logo") %></div>
     <p> 
       <% if current_user %>
         Welcome, <%= current_user.name %>
