--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,16 +11,26 @@
   <body>
   <div class="logo"><%= image_tag("Aberrant.png", :alt => "main logo") %></div>
     <p> 
-      <% if current_user %>
+      <div class="later"><% if current_user %>
         Welcome, <%= current_user.name %>
         &nbsp;&nbsp;|&nbsp;&nbsp;
-        <%= link_to 'Log Out', session_path('dummy'), method: :delete %>
+        <%= link_to 'Log Out', session_path('dummy'), method: :delete %>&nbsp;&nbsp;|&nbsp;&nbsp;
       <% else %>
         <%= link_to 'Log In', login_path %>
         &nbsp;&nbsp;|&nbsp;&nbsp;
-        <%= link_to 'Sign Up', new_user_path %>
+        <%= link_to 'Sign Up', new_user_path %>&nbsp;&nbsp;|&nbsp;&nbsp;
       <% end %>
+        <a href="/">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="/trade">Trade</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="/main">Profile</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     </p>
+      </div>
+    <header class="navbar">
+<div class="navbar-class">
+<div class="container">
+      </div>
+    </div>
+  </header>
     <%= yield %>
   </body>
 </html>
