--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <% end %>
         <a href="/">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
         <a href="/trade">Trade</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="/main">Profile</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="/profile">Profile</a>&nbsp;&nbsp;|&nbsp;&nbsp;
     </p>
       </div>
     <header class="navbar">
