--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,4 +15,17 @@
  */
 .logo {
     width: 1000px;
+    float: center;
+}
+
+header {
+    display: inline-block;
+}
+
+.links {
+    float: right;
+}
+
+.later {
+    float:left;
 }
