--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -1,1 +1,25 @@
 <h1>this is where a user would create a new trade</h1>
+
+<%= form_for @trade, url: new_trade_path, html: { multipart: true } do |form| %>
+  <%= form.label :trade_name %>
+  <%= form.text_field :trade_name %><br>
+
+  <%= form.label :description %>
+  <%= form.text_field :description %><br>
+
+  <%= form.file_field :image %><br><br>
+
+  <%= form.submit 'Create Trade!' %>
+<% end %>
+
+<h1>Trades</h1>
+<hr>
+
+<ul>
+	<% @trades.each do |trade| %>
+		<li>Name:<p><%= trade.trade_name %></p></li>
+		<li>Description<p><%= trade.description %></p></li>
+		<%= image_tag trade.image.url %>
+		<%= link_to 'View Trade', trade_path(trade) %>
+	<% end %>
+</ul>
