--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,19 +13,10 @@
  *= require_tree .
  *= require_self
  */
-.logo {
-    width: 1000px;
-    float: center;
-}
-
-header {
-    display: inline-block;
-}
-
-.links {
-    float: right;
-}
-
-.later {
-    float:left;
+body {
+    background: rgba(0,0,0, 0.5);
+    background-image: url("Aberrant.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
 }
