--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -1,6 +1,6 @@
 <h1>this is where a user would create a new trade</h1>
 
-<%= form_for @trade, url: new_trade_path, html: { multipart: true } do |form| %>
+<%= form_for @trade, url: trades_new_path, html: { multipart: true } do |form| %>
   <%= form.label :trade_name %>
   <%= form.text_field :trade_name %><br>
 
@@ -14,7 +14,7 @@
 
 <h1>Trades</h1>
 <hr>
-
+<p>
 <ul>
 	<% @trades.each do |trade| %>
 		<li>Name:<p><%= trade.trade_name %></p></li>
@@ -23,3 +23,4 @@
 		<%= link_to 'View Trade', trade_path(trade) %>
 	<% end %>
 </ul>
+</p>
