--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,9 +14,16 @@
  *= require_self
  */
 body {
-    background: rgba(0,0,0, 0.5);
+    background: #2E2E2E;
     background-image: url("Aberrant.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    color: #3D8393;
+    padding: 70px;
 }
+
+p {
+    font-size: 24px;
+}
+
