--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,6 +19,10 @@
     <%= f.text_field :email %>
   </div>
   <div class="field">
+    <%= f.label :phone %>
+    <%= f.text_field :phone %>
+  </div>
+  <div class="field">
     <%= f.label :password %>
     <%= f.password_field :password %>
   </div>
