displaying Trades, and single trade, destroy trade

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,15 @@ body {
 }
 
 p {
-    font-size: 24px;
+    font-size: 20px;
 }
 
+.view-trades {
+    font-size: 25px;
+    list-style: none;
+}
+
+.link {
+    font-size: 15px;
+    color: #CAAD7A;
+}
