--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
-<h1>Sign Up</h1>
-<%= form_for @user do |f| %>
+<div class="container-fluid">
+  <h1>Sign Up</h1>
+  <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
       <h2>Form is invalid</h2>
@@ -31,4 +32,5 @@
     <%= f.password_field :password_confirmation %>
   </div>
   <div class="actions"><%= f.submit %></div>
-<% end %>
+  <% end %>
+</div>
