--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 <h1>this is the main profile page</h1>
 
-<p> <%= @user.name %> </p>
+<p><%= @user.name %></p>
+<p><%= @user.email %></p>
+<p><%= @user.phone %></p>
+
