Added grid system to all HTML

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,3 +1,6 @@
 <h1> Welcome</h1>
+<div class="container-fluid">
+<h3>So why would I want to get weird?</h3>
+<p class="col-md-6"> Aberrant Barter is an app that allows a user to post an item that they want to trade and another user may then post an offer of an item that they would be willing to trade.</p>
 
-<p> Aberrant Barter is an app that allows a user to post an item that they want to trade and another user may then post an offer of an item that they would be willing to trade.</p>
+</div>
