--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <h1>this is the main profile page</h1>
+<div class="container-fluid">
+<p class="col-md-4">User Name: <%= @user.name.capitalize %></p>
+<p class="col-md-4">User Email: <%= @user.email %></p>
+<p class="col-md-4">User Phone Number: 951-218-3629<%= @user.phone %></p>
 
-<p><%= @user.name %></p>
-<p><%= @user.email %></p>
-<p><%= @user.phone %></p>
-
+</div>
