Offers now appear

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Aberrant Barter</a>
+        <span class="navbar-brand"><%= link_to 'Aberrant Barter', root_path %></span>
       </div>
       <ul class="nav navbar-nav">
         <li><%= link_to 'View Trades', trades_path %></li>
