--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -5,8 +5,32 @@
 <span class="col-md-12"><%= image_tag @trade.image.url%></span>
 
 
+<% unless Offer.exists?(user: current_user, trade: @trade) %>
+    <% if current_user && @user != @trade.user_id %>
+    <%= form_for [@trade, @offer] do |f| %>
+        <div class="row">
+        <p class="col-md-4">Offer Details: 
+        <%= f.text_field :content %></p>
+        </div>
+        <span class="row"><%= f.file_field :image %></span>
+        <span class="row"><%= f.submit 'Submit Offer!' %></span>
+    <% end %>
+    <% end %>
+<% end %>
+
+<ul>
+    <% @trade.offers.each do |offer| %>
+        <li>
+            <p>Offer submitted by: <%= offer.user.name.capitalize %></p>
+            <p>Description: <%= offer.content %></p>
+            <%= image_tag offer.image.url, height: 250, width: 250 %>
+        </li>
+        
+    <% end %>
+
+</ul>
 
 <p class="col-md-12"><%= link_to "Delete Trade", trade_path(@trade), method: :delete if @trade.user == current_user %></p>
-<p class="col-md-12"><%= link_to "Make Offer" if current_user %></p>
+
 
 </div>
