--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,13 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+
 body {
-    background: #2E2E2E;
-    background-image: url("Aberrant.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    color: #3D8393;
+    background: #DFDAE8;
+    color: #333232;
     padding: 70px;
 }
 
@@ -27,9 +25,19 @@ p {
     font-size: 20px;
 }
 
+.headline {
+    text-align: center;
+    padding: 15px;
+}
+
 .view-trades {
     font-size: 25px;
     list-style: none;
+}
+
+.navbar {
+    
+    color: white;
 }
 
 .link {
@@ -37,6 +45,81 @@ p {
     color: #CAAD7A;
 }
 
-.filter-bar span {
-    color: red;
+#filter {
+    color: #393E41;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.carousel-inner > .item > img { 
+    width:100%; 
+    height:600px; 
+}
+
+.carousel-caption {
+    background-color: rgba(245,239,255, 0.7);
+    color: #393E41;
+}
+
+#log_in, #sign_up {
+    background-color: #9A998C;
+}
+
+#all, #closed, #open {
+    color: #393E41;
+}
+
+.single-trade {
+    background-color: #424B54;
+    color: rgba(245,239,255, 0.7);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 15px;
+    justify-content: flex-start;
+    border: 2px solid #393E41;
+}
+
+.view-trade {
+    width: 90%; 
+    background-color: #424B54;
+    margin-bottom: 25px;
+    color: rgba(245,239,255, 0.7);
+    display: flex;
+    border: 2px solid #393E41;
+    padding: 10px;
+    margin: 15px;
+}
+
+.trade-image {
+    padding: 15px;
+}
+
+.make-offer {
+    width: 90%;
+    background-color: #D0C5B2;
+    color: #424B54;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    border: 2px solid #393E41;
+    padding: 10px;
+    margin: 15px;
+}
+
+.sub-offer, .sub-trade {
+    color: #424B54;
+    padding: 5px;
+}
+
+.view-offer {
+    width: 90%;
+    background-color: #93A8AC;
+    color: rgba(245,239,255, 1);
+    display: flex;
+    justify-content: center;
+    margin: 15px;
+    padding: 10px;
+    border: 2px solid #393E41;
 }
