--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,6 +1,89 @@
-<h1> Welcome</h1>
-<div class="container-fluid">
-<h3>So why would I want to get weird?</h3>
-<p class="col-md-6"> Aberrant Barter is an app that allows a user to post an item that they want to trade and another user may then post an offer of an item that they would be willing to trade.</p>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+    // Activate carousel
 
+    $('#myCarousel').carousel({
+        interval: 3000,
+        cycle: true
+    });
+    
+    // Enable carousel control
+	$(".left").click(function(){
+    	$("#myCarousel").carousel('prev');
+    });
+    $(".right").click(function(){
+    	$("#myCarousel").carousel('next');
+    });
+    
+    // Enable carousel indicators
+    $(".slide-one").click(function(){
+    	$("#myCarousel").carousel(0);
+    });
+    $(".slide-two").click(function(){
+    	$("#myCarousel").carousel(1);
+    });
+    $(".slide-three").click(function(){
+    	$("#myCarousel").carousel(2);
+    });
+});
+</script>
+<style type="text/css">
+.carousel{
+    background: #2f4357;
+    margin-top: 30px;
+}
+.carousel .item{
+    min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
+}
+.carousel .item img{
+    margin: 0 auto; /* Align slide image horizontally center */
+}
+.bs-example{
+	margin: 20px;
+}
+</style>
+</head>
+<body>
+<div class="">
+    <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+    	<!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li class="slide-one active"></li>
+            <li class="slide-two"></li>
+            <li class="slide-three"></li>
+        </ol>   
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+            <div class="active item">
+                <img src="https://static.pexels.com/photos/374074/pexels-photo-374074.jpeg" alt="First Slide">
+         		<div class="carousel-caption">
+                  <h3>Sign Up</h3>
+                  <p>Signing up is easy and free! This will allow you to view and post trades and make offers!</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="https://static.pexels.com/photos/139261/pexels-photo-139261.jpeg" alt="Second Slide">
+                <div class="carousel-caption">
+                  <h3>Post your item</h3>
+                  <p>If you have an item you want to trade, just snap a photo and post it! Just wait for offers.</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="https://static.pexels.com/photos/401682/pexels-photo-401682.jpeg" alt="Third Slide">
+                <div class="carousel-caption">
+                  <h3>Accept an Offer</h3>
+                  <p>Once someone submits and offer, you may accept that offer and make the trade! That easy.</p>
+                </div>
+            </div>
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control left">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="carousel-control right">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div>
 </div>
