--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -1,38 +1,31 @@
-<h1>Trade should show up right here</h1>
+<h1 class="headline">See something you like? Submit an offer!</h1>
 <div class="container-fluid">
-<% if @trade.closed %><h2>CLOSED</h2><% end %>
-<p class="">Name of item: <%= @trade.title %></p>
-<p class="">Item Description: <%= @trade.description %></p>
-<span class=""><%= image_tag @trade.image.url%></span>
-
-
-<% unless Offer.exists?(user: current_user, trade: @trade) %>
-    <% if current_user && @trade.user != current_user && !@trade.closed %>
-    <%= form_for [@trade, @offer] do |f| %>
-        <div class="row">
-        <p class="col-md-4">Offer Details: 
-        <%= f.text_field :content %></p>
+    <% if @trade.closed %><h2 class="headline">CLOSED</h2><% end %>
+        <div class="view-trade row">
+            <p class="col-md-3">Name of item: <br><%= @trade.title %></p>
+            <p class="col-md-3">Item Description: <br><%= @trade.description %></p>
+            <p class="trade-image col-md-6"><%= image_tag @trade.image.url, height: 500, width: 500%></p>
+            <p class="col-md-6"><% if @trade.user == current_user %><%= link_to "Delete Trade!", trade_path(@trade), method: :delete, data: { confirm: "Are you sure you want to delete this trade?"} %> <% end %>
         </div>
-        <span class="row"><%= f.file_field :image %></span>
-        <span class="row"><%= f.submit 'Submit Offer!' %></span>
-    <% end %>
-    <% end %>
-<% end %>
 
-<ul>
-    <% @trade.offers.each do |offer| %>
-        <li>
-            <p>Offer submitted by: <%= offer.user.name.capitalize %></p>
-            <p>This is the offer: <%= offer.content %></p>
-            <%= image_tag offer.image.url, height: 250, width: 250 %>
-            <%#= link_to "Accept Offer", accept_path(@trade), method: :patch if @trade.user == current_user && !@trade.closed %>
-        </li>
-        
+    <% unless Offer.exists?(user: current_user, trade: @trade) %>
+        <% if current_user && @trade.user != current_user && !@trade.closed %>
+            <%= form_for [@trade, @offer] do |f| %>
+                <div class="make-offer row">
+                    <p class="">Offer Details: <br><%= f.text_field :content, required: true %></p>
+                    <p class=""><%= f.file_field :image, required: true %></p>
+                    <p class="sub-offer"><%= f.submit 'Submit Offer!' %></p>
+                 </div>
+            <% end %>
+        <% end %>
     <% end %>
 
-</ul>
-
-<p class="col-md-12"><%= link_to "Delete Trade", trade_path(@trade), method: :delete if @trade.user == current_user %></p>
-
-
+        <% @trade.offers.each do |offer| %>
+            <div class="view-offer row">
+                <p class="col-md-12">Offer submitted by: <br><%= offer.user.name.capitalize %></p>
+                <p class="col-md-12">This is the offer: <br><%= offer.content %></p>
+                <p class="col-md-12"><%= image_tag offer.image.url, height: 250, width: 250 %></p>
+                <p class="col-md-12"><%= link_to "Accept Offer", accept_path(@trade), method: :patch if @trade.user == current_user && !@trade.closed %></p>
+            </div>
+        <% end %>
 </div>
