--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <div class="">
+  <div class="headline">
     <% if !current_user %>
       <h1 id="view-features">Please log-in or sign up to view all features</h1>
     <% end %>
