--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -9,11 +9,13 @@
 	<div>
 		<ul>
 			<% @trades.each do |trade| %>
-			<div class="row single-trade">
-				<p class="col-md-2">Name: <br><%= trade.title %></p>
-				<p class="col-md-2">Description: <br><%= trade.description %></p>
-				<p class="trade-image col-md-5"><%= image_tag trade.image.url, height: 300, width: 300 %></p>
-				<p class="col-md-3"><%= link_to 'View Trade', trade_path(trade) %></p>
+			<div class="single-trade">
+				<p class="col-md-3"><b>Name: </b><br><%= trade.title %></p>
+				<p class="col-md-3"><b>Description: </b><br><%= trade.description %></p>
+				<p class="trade-image col-md-6"><%= image_tag trade.image.url, height: 300, width: 300 %><br>
+				<%= link_to 'View Trade', trade_path(trade) %></p>
+				<%= if @user == current_user %>
+				<%= link_to 'Make Offer', 
 			</div>
 			<% end %>
 		</ul>
