--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -74,19 +74,17 @@ p {
     background-color: #424B54;
     color: rgba(245,239,255, 0.7);
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+    justify-content: flex-end;
     margin: 15px;
-    justify-content: flex-start;
     border: 2px solid #393E41;
 }
 
 .view-trade {
-    width: 90%; 
     background-color: #424B54;
     margin-bottom: 25px;
     color: rgba(245,239,255, 0.7);
     display: flex;
+    justify-content: center;
     border: 2px solid #393E41;
     padding: 10px;
     margin: 15px;
@@ -97,7 +95,6 @@ p {
 }
 
 .make-offer {
-    width: 90%;
     background-color: #D0C5B2;
     color: #424B54;
     display: flex;
@@ -114,7 +111,6 @@ p {
 }
 
 .view-offer {
-    width: 90%;
     background-color: #93A8AC;
     color: rgba(245,239,255, 1);
     display: flex;
@@ -123,3 +119,24 @@ p {
     padding: 10px;
     border: 2px solid #393E41;
 }
+
+.user-info {
+    color: #393E41;
+    display: flex;
+    justify-content: center;
+}
+
+.user-trade {
+    background-color: #93A8AC;
+    color: rgba(245,239,255, 1);
+    display: flex;
+    justify-content: center;
+    margin: 15px;
+    padding: 10px;
+    border: 2px solid #393E41;
+}
+ 
+.trade-link {
+    display: flex;
+    justify-content: center;
+} 
